--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,13 +14,13 @@
   "prefer_related_applications": false,
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect fill='%23121212' width='512' height='512'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='200' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>HW</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect fill='%23121212' width='512' height='512'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='200' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>B</text></svg>",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect fill='%23121212' width='192' height='192'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='80' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>HW</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect fill='%23121212' width='192' height='192'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='80' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>B</text></svg>",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any maskable"
@@ -28,7 +28,7 @@
   ],
   "screenshots": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 540 1170'><rect fill='%23121212' width='540' height='1170'/><rect x='120' y='535' width='300' height='100' rx='16' fill='%231e1e1e'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='40' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>Hello World</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 540 1170'><rect fill='%23121212' width='540' height='1170'/><rect x='120' y='535' width='300' height='100' rx='16' fill='%231e1e1e'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='40' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>Bouldering</text></svg>",
       "sizes": "540x1170",
       "type": "image/svg+xml",
       "label": "Hello World App Screenshot"
@@ -42,7 +42,7 @@
       "url": "/",
       "icons": [
         {
-          "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect fill='%23121212' width='96' height='96'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='40' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>HW</text></svg>",
+          "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect fill='%23121212' width='96' height='96'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='40' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>B</text></svg>",
           "sizes": "96x96",
           "type": "image/svg+xml"
         }
