--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Bouldering Web App",
-  "short_name": "Bouldering",
-  "description": "A Bouldering application",
+  "name": "BoulderScore",
+  "short_name": "BoulderScore",
+  "description": "BoulderScore",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
@@ -10,17 +10,17 @@
   "scope": "/",
   "lang": "en-US",
   "dir": "ltr",
-  "categories": ["sport"],
+  "categories": ["sport", "climbing", "bouldering"],
   "prefer_related_applications": false,
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect fill='%23222222' width='512' height='512'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='200' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>B</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><rect fill='%23222222' width='512' height='512'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='200' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>BS</text></svg>",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect fill='%23222222' width='192' height='192'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='80' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>B</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect fill='%23222222' width='192' height='192'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='80' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>BS</text></svg>",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any maskable"
@@ -28,21 +28,21 @@
   ],
   "screenshots": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 540 1170'><rect fill='%23222222' width='540' height='1170'/><rect x='120' y='535' width='300' height='100' rx='16' fill='%231e1e1e'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='40' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>Bouldering</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 540 1170'><rect fill='%23222222' width='540' height='1170'/><rect x='120' y='535' width='300' height='100' rx='16' fill='%231e1e1e'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='40' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>BoulderScore</text></svg>",
       "sizes": "540x1170",
       "type": "image/svg+xml",
-      "label": "Hello World App Screenshot"
+      "label": "BoulderScore Screenshot"
     }
   ],
   "shortcuts": [
     {
       "name": "Open App",
       "short_name": "Open",
-      "description": "Open Hello World directly",
+      "description": "Open BoulderScore directly",
       "url": "/",
       "icons": [
         {
-          "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect fill='%23222222' width='96' height='96'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='40' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>B</text></svg>",
+          "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'><rect fill='%23222222' width='96' height='96'/><text x='50%25' y='50%25' font-family='Roboto, sans-serif' font-size='40' fill='%23ffffff' text-anchor='middle' dominant-baseline='middle'>BS</text></svg>",
           "sizes": "96x96",
           "type": "image/svg+xml"
         }
